--- a/FieldGps/AndroidManifest.xml
+++ b/FieldGps/AndroidManifest.xml
@@ -8,13 +8,18 @@
         android:targetSdkVersion="15" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    
     <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".LocationActivity"
-            android:label="@string/title_activity_location" >
+            android:label="@string/title_activity_location"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
